# covid19uk

./: .gitignore  LICENSE  README.md  covid_ode.py  covid_pipeline.sge  covid_stochastic.py  enqueue_pipeline.sh  environment.yaml  example_cases.csv  example_config.yaml  hotspot_detection.py  household_sim.py  inference.py  lancs_london.py  mcmc.py  medium_term.yaml  medium_term_prediction.py  model_spec.py  model_spec_marginal.py  my_config.yaml  ode_config.yaml  prediction.py  prepare_config.py  production_config.yaml  pyproject.toml  r0_calc.py  requirements-freeze.txt  requirements.txt  ruffus_pipeline.py  scotland_config.yaml  scratch.py  scratch_3.py  scratch_covid.py  simulate.py  stochastic_sim_covid.pkl  stochastic_sim_covid1.pkl  stochastic_sim_medium.pkl  summary.py  template_config.yaml  tf2_tests.py  (+4 more)
covid/: cli_arg_parse.py  config.py  data.py  formats.py  model.py  model_nonflat.py  model_spec.py  pipeline.py  plotting.py  pydata.py  rdata.py  ruffus_pipeline.py  summary.py  util.py
covid/data/: __init__.py  area_code.py  area_code_test.py  case_data.py  data.py  tier_data_test.py  tiers.py  util.py
covid/impl/: Categorical2.py  KCategorical.py  UniformInteger.py  adaptive_random_walk_metropolis.py  chainbinom_simulate.py  debugging.py  discrete_markov.py  event_time.py  event_time_mh.py  event_time_proposal.py  gibbs.py  gibbs_kernel.py  mcmc.py  multi_scan_kernel.py  occult_events_mh.py  occult_proposal.py  util.py
covid/tasks/: __init__.py  assemble_data.py  case_exceedance.py  geopackage.py  hotspot_detection.py  inference.py  insample_predictive_timeseries.py  mcmc_kernel_factory.py  next_generation_matrix.py  overall_rt.py  predict.py  prepare_config.py  summarize.py  summary.py  summary_geopackage.py  summary_longformat.py  thin_posterior.py  within_between.py
covid19uk/: __init__.py  cli_arg_parse.py  formats.py  model_spec.py  plotting.py  util.py  version.py
covid19uk/data/: __init__.py  area_code.py  assemble.py  case_data.py  loaders.py  tiers.py
covid19uk/inference/: inference.py
covid19uk/posterior/: predict.py  thin.py  (+2 more)
data/: DailyConfirmedCases.csv  DailyConfirmedCases_2020-03-29.csv  DailyConfirmedCases_2020-04-01.xlsx  DailyConfirmedCases_2020-04-04.csv  DailyConfirmedCases_2020-04-08.csv  README.md  c2019modagepop.csv  commute_vol_2020-03-20.csv  commute_vol_2020-03-27.csv  commute_vol_2020-04-07.csv  data.py  example_cases.csv  example_mobility.csv  example_npi.csv  example_num_tested.csv  example_population.csv  example_traffic_flow.csv  mergedflows.csv  mergedflows.rds  movement.rds  polymod_no_school_df.rds  polymod_normal_df.rds  pop.rds  uk_clip.gpkg
doc/: age_space_model.tex  bayes_risk.bib  lancs_space_model_concept.tex
tests/: test_data_ingest.py  test_event_initialize.py  test_event_proposals.py  test_impl_util.py  test_mcmc.py  test_propagate.py  test_simulate.py  test_stochastic_logp.py  test_uniforminteger.py  test_util.py
(+6 files in other folders)
