[tool.poetry]
name = "covid19uk"
version = "0.8.0"
description = "Spatial stochastic SEIR analysis of COVID-19 in the UK"
authors = ["Chris Jewell <c.jewell@lancaster.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.3"
geopandas = "^0.8.1"
PyYAML = "^5.3.1"
tqdm = "^4.50.2"
h5py = "^3.1.0"
gemlib = {git = "http://fhm-chicas-code.lancs.ac.uk/GEM/gemlib.git", branch="develop"}
xarray = {extras = ["netcdf4"], version = "^0.17.0"}
netCDF4 = "^1.5.6"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
jupyter = "^1.0.0"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.1"
jedi = "^0.17.2"
toml = "^0.10.2"

[tool.black]
line-length = 80
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
